# nls-coursework

./: README.md  Report1.md  pyproject.toml  pyrightconfig.json  report2.md  requirements-common.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/: classifier.py  clusters.py  corpus.py  coursework1.py  coursework2.py  embeddings.py  main.py  train.py  typings.py  utilities.py
src/typestubs/nltk/stem/: snowball.pyi
